# KACAssignment

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: data_manipulation.ipynb
src/kacassignment/: __main__.py
