[tool.poetry]
name = "kacassignment"
version = "0.1.0"
description = "A simple KAC assignment"
authors = ["samwurel", "chriso345"]
# license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
kacassignment = "kacassignment.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
pandas = "^2.2.3"
pulp = "^3.1.1"
click = "^8.2.1"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
